--- a/09 Barra de navegação/index.html
+++ b/09 Barra de navegação/index.html
@@ -51,6 +51,27 @@
 
     </nav>
 
+    <h2>Barra de navegação com menu responsivo</h2>
+    <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
+        <!-- Logo -->
+        <a class="navbar-brand" href="">Logo</a>
+
+        <!-- Menu Hamburguer -->
+        <button class="navbar-toggler" data-toggle="collapse" data-target="#menu">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <!-- Navegação -->
+        <div class="collapse navbar-collapse" id="menu">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item"><a class="nav-link" href="">Home</a></li>
+                <li class="nav-item"><a class="nav-link" href="">Contato</a></li>
+                <li class="nav-item"><a class="nav-link" href="">Sobre</a></li>
+            </ul>
+        </div>
+
+    </nav>
+
 </body>
 
 </html>
