--- a/09 Barra de navegação/index.html
+++ b/09 Barra de navegação/index.html
@@ -13,9 +13,15 @@
 </head>
 
 <body style="margin-bottom: 200px; padding: 20px;">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+        integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+        crossorigin="anonymous"></script>
+    <script src="js/bootstrap.min.js"></script>
 
     <!-- 
         Navegação
@@ -57,12 +63,12 @@
         <a class="navbar-brand" href="">Logo</a>
 
         <!-- Menu Hamburguer -->
-        <button class="navbar-toggler" data-toggle="collapse" data-target="#menu">
+        <button class="navbar-toggler" data-toggle="collapse" data-target="#menu1">
             <span class="navbar-toggler-icon"></span>
         </button>
 
         <!-- Navegação -->
-        <div class="collapse navbar-collapse" id="menu">
+        <div class="collapse navbar-collapse" id="menu1">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item"><a class="nav-link" href="">Home</a></li>
                 <li class="nav-item"><a class="nav-link" href="">Contato</a></li>
@@ -71,6 +77,175 @@
         </div>
 
     </nav>
+
+    <h2>Barra de navegação com formulário</h2>
+    <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
+        <!-- Logo -->
+        <a class="navbar-brand" href="">Logo</a>
+
+        <!-- Menu Hamburguer -->
+        <button class="navbar-toggler" data-toggle="collapse" data-target="#menu2">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <!-- Navegação -->
+        <div class="collapse navbar-collapse" id="menu2">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item"><a class="nav-link" href="">Home</a></li>
+                <li class="nav-item"><a class="nav-link" href="">Contato</a></li>
+                <li class="nav-item"><a class="nav-link" href="">Sobre</a></li>
+            </ul>
+
+            <!-- Formulário -->
+            <form class="form-inline">
+                <input type="" class="form-control" placeholder="pesquisar...">
+                <button class="btn btn-outline-success">Ok</button>
+            </form>
+        </div>
+    </nav>
+
+    <h2>Barra de navegação com DropDawn</h2>
+    <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
+        <!-- Logo -->
+        <a class="navbar-brand" href="">Logo</a>
+
+        <!-- Menu Hamburguer -->
+        <button class="navbar-toggler" data-toggle="collapse" data-target="#menu3">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <!-- Navegação -->
+        <div class="collapse navbar-collapse" id="menu3">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item"><a class="nav-link" href="">Home</a></li>
+                <li class="nav-item"><a class="nav-link" href="">Contato</a></li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="" data-toggle="dropdown">Sobre</a>
+
+                    <div class="dropdown-menu">
+                        <a href="" class="dropdown-item">Sobre 1</a>
+                        <a href="" class="dropdown-item">Sobre 2</a>
+                        <a href="" class="dropdown-item">Sobre 3</a>
+                    </div>
+
+                </li>
+            </ul>
+        </div>
+    </nav>
+
+    <!-- 
+        Cores
+        opções:
+
+        - bg-primary, 
+        - bg-secondary, 
+        - bg-success,bg-info, 
+        - bg-warning, 
+        - bg-danger, 
+        - bg-ligth, 
+        - bg-dark
+     -->
+    <h2>Cores</h2>
+    <nav class="navbar navbar-expand-sm navbar-light bg-warning">
+        <!-- Logo -->
+        <a class="navbar-brand" href="">Logo</a>
+
+        <!-- Navegação -->
+        <ul class="navbar-nav ml-auto">
+            <li class="nav-item"><a class="nav-link" href="">Home</a></li>
+            <li class="nav-item"><a class="nav-link" href="">Contato</a></li>
+            <li class="nav-item"><a class="nav-link" href="">Sobre</a></li>
+        </ul>
+
+    </nav>
+
+    <!-- 
+        Alinhamentos
+        
+        opções:
+        - fixed-top
+        - fixed-bottom
+        - sticky
+    -->
+
+    <h2>Alinhamentos</h2>
+    <nav class="navbar fixed-bottom navbar-expand-sm navbar-dark bg-primary">
+        <!-- Logo -->
+        <a class="navbar-brand" href="">Logo</a>
+
+        <!-- Navegação -->
+        <ul class="navbar-nav ml-auto">
+            <li class="nav-item"><a class="nav-link" href="">Home</a></li>
+            <li class="nav-item"><a class="nav-link" href="">Contato</a></li>
+            <li class="nav-item"><a class="nav-link" href="">Sobre</a></li>
+        </ul>
+
+    </nav>
+
+    <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus vestibulum elementum
+        quam, a viverra ligula fringilla tempus. Ut tempor, dui eu semper aliquet, sem nisi pellentesque libero,
+        suscipit porttitor risus magna vel lorem.
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus vestibulum elementum quam, a viverra ligula
+        fringilla tempus. Ut tempor, dui eu semper aliquet, sem nisi pellentesque libero, suscipit porttitor risus magna
+        vel lorem.
+    </p>
+    <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus vestibulum elementum
+        quam, a viverra ligula fringilla tempus. Ut tempor, dui eu semper aliquet, sem nisi pellentesque libero,
+        suscipit porttitor risus magna vel lorem.
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus vestibulum elementum quam, a viverra ligula
+        fringilla tempus. Ut tempor, dui eu semper aliquet, sem nisi pellentesque libero, suscipit porttitor risus magna
+        vel lorem.
+    </p>
+    <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus vestibulum elementum
+        quam, a viverra ligula fringilla tempus. Ut tempor, dui eu semper aliquet, sem nisi pellentesque libero,
+        suscipit porttitor risus magna vel lorem.
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus vestibulum elementum quam, a viverra ligula
+        fringilla tempus. Ut tempor, dui eu semper aliquet, sem nisi pellentesque libero, suscipit porttitor risus magna
+        vel lorem.
+    </p>
+    <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus vestibulum elementum
+        quam, a viverra ligula fringilla tempus. Ut tempor, dui eu semper aliquet, sem nisi pellentesque libero,
+        suscipit porttitor risus magna vel lorem.
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus vestibulum elementum quam, a viverra ligula
+        fringilla tempus. Ut tempor, dui eu semper aliquet, sem nisi pellentesque libero, suscipit porttitor risus magna
+        vel lorem.
+    </p>
+    <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus vestibulum elementum
+        quam, a viverra ligula fringilla tempus. Ut tempor, dui eu semper aliquet, sem nisi pellentesque libero,
+        suscipit porttitor risus magna vel lorem.
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus vestibulum elementum quam, a viverra ligula
+        fringilla tempus. Ut tempor, dui eu semper aliquet, sem nisi pellentesque libero, suscipit porttitor risus magna
+        vel lorem.
+    </p>
+    <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus vestibulum elementum
+        quam, a viverra ligula fringilla tempus. Ut tempor, dui eu semper aliquet, sem nisi pellentesque libero,
+        suscipit porttitor risus magna vel lorem.
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus vestibulum elementum quam, a viverra ligula
+        fringilla tempus. Ut tempor, dui eu semper aliquet, sem nisi pellentesque libero, suscipit porttitor risus magna
+        vel lorem.
+    </p>
+    <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus vestibulum elementum
+        quam, a viverra ligula fringilla tempus. Ut tempor, dui eu semper aliquet, sem nisi pellentesque libero,
+        suscipit porttitor risus magna vel lorem.
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus vestibulum elementum quam, a viverra ligula
+        fringilla tempus. Ut tempor, dui eu semper aliquet, sem nisi pellentesque libero, suscipit porttitor risus magna
+        vel lorem.
+    </p>
+    <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus vestibulum elementum
+        quam, a viverra ligula fringilla tempus. Ut tempor, dui eu semper aliquet, sem nisi pellentesque libero,
+        suscipit porttitor risus magna vel lorem.
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus vestibulum elementum quam, a viverra ligula
+        fringilla tempus. Ut tempor, dui eu semper aliquet, sem nisi pellentesque libero, suscipit porttitor risus magna
+        vel lorem.
+    </p>
 
 </body>
 
