--- a/15 Tabelas e Paginacao/index.html
+++ b/15 Tabelas e Paginacao/index.html
@@ -260,6 +260,53 @@
         </table>
     </div>
 
+    <h2>Paginação: pagination, page-item, page-link - active, disable</h2>
+    <nav>
+        <ul class="pagination">
+            <li class="page-item disabled"><a class="page-link" href="">Anterior</a></li>
+            <li class="page-item  active"><a class="page-link" href="">1</a></li>
+            <li class=" page-item"><a class="page-link" href="">2</a></li>
+            <li class=" page-item"><a class="page-link" href="">Próximo</a></li>
+        </ul>
+    </nav>
+
+    <h2>Alinhamento: justify-content ALINHAMENTO(center, end)</h2>
+    <nav>
+        <ul class="pagination justify-content-end">
+            <li class="page-item disabled"><a class="page-link" href="">Anterior</a></li>
+            <li class="page-item  active"><a class="page-link" href="">1</a></li>
+            <li class=" page-item"><a class="page-link" href="">2</a></li>
+            <li class=" page-item"><a class="page-link" href="">Próximo</a></li>
+        </ul>
+    </nav>
+
+    <h2>Tamanho: pagination TAMANHO(sm, lg)</h2>
+    <nav>
+        <ul class="pagination pagination-lg">
+            <li class="page-item disabled"><a class="page-link" href="">Anterior</a></li>
+            <li class="page-item  active"><a class="page-link" href="">1</a></li>
+            <li class=" page-item"><a class="page-link" href="">2</a></li>
+            <li class=" page-item"><a class="page-link" href="">Próximo</a></li>
+        </ul>
+    </nav>
+
+    <h2>Setas</h2>
+    <nav>
+        <ul class="pagination pagination-lg">
+            <li class="page-item disabled"><a class="page-link" href="">
+                    <span>&laquo;</span>
+                    <!-- Classe sr-only é utilizado para pessoas com deficiência visual -->
+                    <span class="sr-only">Anterior</span></a>
+            </li>
+            <li class="page-item  active"><a class="page-link" href="">1</a></li>
+            <li class=" page-item"><a class="page-link" href="">2</a></li>
+            <li class="page-item disabled"><a class="page-link" href="">
+                    <span>&raquo;</span></a>
+                <span class="sr-only">Próximo</span></a>
+            </li>
+        </ul>
+    </nav>
+
 </body>
 
 </html>
