--- a/16 Cards/index.html
+++ b/16 Cards/index.html
@@ -26,7 +26,7 @@
 
     <h3>Card Simples</h3>
     <hr>
-    <div class="card">
+    <div class="card mb-5">
         <div class="card-body">
             <h4 class="card-title">Título do Card</h4>
             <h6 class="card-subtitle">Subtítulo do Card</h6>
@@ -42,11 +42,11 @@
             </p>
             <a class="btn btn-outline-primary" href="">Leia mais</a>
         </div>
-    </div><br><br>
+    </div>
 
     <h3>Card com Imagem</h3>
     <hr>
-    <div class="card">
+    <div class="card mb-5">
         <img class="card-img-top" src="https://source.unsplash.com/random/600x200">
         <div class="card-body">
             <h4 class="card-title">Título do Card</h4>
@@ -63,11 +63,11 @@
             </p>
             <a class="btn btn-outline-primary" href="">Leia mais</a>
         </div>
-    </div><br><br>
+    </div>
 
     <h3>Card com Imagem Sobreposta</h3>
     <hr>
-    <div class="card">
+    <div class="card mb-5">
         <img class="card-img" src="https://source.unsplash.com/random/600x200">
         <div class="card-img-overlay">
             <h4 class="card-title text-white">Título do Card</h4>
@@ -84,11 +84,11 @@
             </p>
             <a class="btn btn-outline-light" href="">Leia mais</a>
         </div>
-    </div><br><br>
+    </div>
 
     <h3>Card com cabecalho e footer</h3>
     <hr>
-    <div class="card">
+    <div class="card mb-5">
         <div class="card-header">
             Cabeçalho do card
         </div>
@@ -110,11 +110,11 @@
         <div class="card-footer text-center">
             Footer do card
         </div>
-    </div><br><br>
+    </div>
 
     <h3>Card com navegação</h3>
     <hr>
-    <div class="card">
+    <div class="card mb-5">
         <div class="card-header">
             <ul class="nav nav-tabs card-header-tabs">
                 <li class="nav-item"><a class="nav-link" href="">Link 1</a></li>
@@ -137,7 +137,119 @@
             </p>
             <a class="btn btn-outline-primary btn-block" href="">Leia mais</a>
         </div>
-    </div><br><br>
+    </div>
+
+    <h3>Card com cores de fundo</h3>
+    <hr>
+    <div class="card bg-primary text-white mb-5">
+        <div class="card-header">
+            Cabeçalho
+        </div>
+        <div class="card-body">
+            <h4>Título do Card</h4>
+            <h6 class="card-subtitle">Subtítulo do Card</h6>
+            <p class="card-text">
+                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
+                scrambled it to make a type specimen book. It has survived not only five centuries, but also the
+                leapinto
+                electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with therelease
+                of
+                Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like
+                Aldus PageMaker including versions of Lorem Ipsum.
+            </p>
+            <a class="btn btn-outline-primary btn-block" href="">Leia mais</a>
+        </div>
+    </div>
+
+    <h3>Card com bordas</h3>
+    <hr>
+    <div class="card bg-light border-dark mb-5">
+        <div class="card-header">
+            Cabeçalho
+        </div>
+        <div class="card-body">
+            <h4>Título do Card</h4>
+            <h6 class="card-subtitle">Subtítulo do Card</h6>
+            <p class="card-text">
+                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
+                scrambled it to make a type specimen book. It has survived not only five centuries, but also the
+                leapinto
+                electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with therelease
+                of
+                Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like
+                Aldus PageMaker including versions of Lorem Ipsum.
+            </p>
+            <a class="btn btn-outline-primary btn-block" href="">Leia mais</a>
+        </div>
+    </div>
+
+    <h3>Card com colunas</h3>
+    <hr>
+    <div class="card-columns mb-5">
+
+        <div class="card mb-5">
+            <img class="card-img" src="https://source.unsplash.com/random/600x300">
+            <div class="card-img-overlay">
+                <h4 class="card-title text-white">Título do Card</h4>
+                <h6 class="card-subtitle text-white">Subtítulo do Card</h6>
+                <p class="card-text text-white">
+                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                    industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type
+                    and
+                </p>
+                <a class="btn btn-outline-light" href="">Leia mais</a>
+            </div>
+        </div>
+
+        <div class="card mb-5">
+            <div class="card-body">
+                <h4 class="card-title">Título do Card</h4>
+                <h6 class="card-subtitle">Subtítulo do Card</h6>
+                <p class="card-text">
+                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                    industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type
+                    and
+                </p>
+                <a class="btn btn-outline-primary" href="">Leia mais</a>
+            </div>
+        </div>
+        <div class="card bg-primary text-white mb-5">
+            <div class="card-header">
+                Cabeçalho
+            </div>
+            <div class="card-body">
+                <h4>Título do Card</h4>
+                <h6 class="card-subtitle">Subtítulo do Card</h6>
+                <p class="card-text">
+                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                    industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type
+                    and
+                </p>
+                <a class="btn btn-outline-primary btn-block" href="">Leia mais</a>
+            </div>
+        </div>
+
+        <div class="card mb-5">
+            <div class="card-header">
+                <ul class="nav nav-tabs card-header-tabs">
+                    <li class="nav-item"><a class="nav-link" href="">Link 1</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="">Link 2</a></li>
+                    <li class="nav-item"><a class="nav-link disabled" href="">Link 3</a></li>
+                </ul>
+            </div>
+            <div class="card-body">
+                <h4>Título do Card</h4>
+                <h6 class="card-subtitle">Subtítulo do Card</h6>
+                <p class="card-text">
+                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                    industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type
+                </p>
+                <a class="btn btn-outline-primary btn-block" href="">Leia mais</a>
+            </div>
+        </div>
+    </div>
 
 </body>
 
