Colunas no layout grid implementado

--- a/19 - Sistema de Grid/index.html
+++ b/19 - Sistema de Grid/index.html
@@ -35,7 +35,42 @@
 
     <div class="container marcador-container">
 
-        Conteúdo do site
+        <!-- Cria uma linha -->
+        <div class="row marcador">
+            Topo
+        </div>
+
+        <div class="row marcador">
+            Menu
+        </div>
+
+        <div class="row marcador">
+            Conteúdo
+        </div>
+
+        <div class="row marcador mb-5">
+            Rodapé
+        </div>
+
+        <!-- Com a classe row, cria-se um flex container -->
+        <div class="row mb-5">
+            <div class="marcador">Área 1</div>
+            <div class="marcador">Área 2</div>
+        </div>
+
+        <div class="row mb-5">
+            <div class="marcador col-12 col-sm-2 col-md-1 col-lg-11 col-xl-10">Conteúdo</div>
+        </div>
+
+        <div class="row mb-5">
+            <div class="marcador col-3">Conteúdo 1</div>
+            <div class="marcador col-9">Conteúdo 2</div>
+        </div>
+
+        <div class="row mb-5">
+            <div class="marcador col-3 col-sm-11">Conteúdo 1</div>
+            <div class="marcador col-9">Conteúdo 2</div>
+        </div>
 
     </div>
 
