Novos testes com layout grid implementado

--- a/19 - Sistema de Grid/index.html
+++ b/19 - Sistema de Grid/index.html
@@ -33,7 +33,7 @@
 
 <body style="margin-bottom: 200px; padding: 20px;">
 
-    <div class="container marcador-container">
+    <div class="container marcador-container mb-5">
 
         <!-- Cria uma linha -->
         <div class="row marcador">
@@ -59,6 +59,10 @@
         </div>
 
         <div class="row mb-5">
+            <!-- 
+                Em um dispositivo extra small podemos exibir doze colunas, em um small, 
+                duas colunas e por ai vai conforme estilizado abaixo
+            -->
             <div class="marcador col-12 col-sm-2 col-md-1 col-lg-11 col-xl-10">Conteúdo</div>
         </div>
 
@@ -70,6 +74,43 @@
         <div class="row mb-5">
             <div class="marcador col-3 col-sm-11">Conteúdo 1</div>
             <div class="marcador col-9">Conteúdo 2</div>
+        </div>
+
+    </div>
+
+    <div class="container marcador">
+
+        <div class="row">
+
+            <div class="marcador col-md-6 col-xl-4">
+                <h2>Lorem</h2>
+                <p>
+                    Área de conteúdo.<br>
+                    Cada área dessa contém seis grids.
+                </p>
+                <button class="btn btn-warning">Leia mais</button>
+            </div>
+
+            <div class="marcador col-md-6 col-xl-4">
+                <h2>Lorem</h2>
+                <p>
+                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                    industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type
+                    and
+                </p>
+                <button class="btn btn-warning">Leia mais</button>
+            </div>
+
+            <div class="marcador col-md-12 col-sm-6 col-xl-4">
+                <h2>Lorem</h2>
+                <p>
+                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                    industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type
+                    and
+                </p>
+                <button class="btn btn-warning">Leia mais</button>
+            </div>
+
         </div>
 
     </div>
